--- a/index.html
+++ b/index.html
@@ -71,5 +71,11 @@
       </div>
     </main>
     <script src="main_2.0.js"></script>
+
+    <footer id="main-footer">
+      <div class="footer-content container">
+      <p>Developed by Gustavo Perez, 2022. You may copy and distribute verbatim copies of the program's source provided that you publish on each copy an appropriate copyright notice. v1.0</p>
+    </div>
+    </footer>
   </body>
 </html>
