--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Run time & Flow Rate Calculator</h1>
       </header>
 
-      <div id="div2">
+      <!-- <div id="div2"> -->
         <div class="dropdown" class="current">
           <button class="dropbtn1">Calculate</button>
          
@@ -68,7 +68,7 @@
           </div>
          
         </div>
-      </div>
+      <!-- </div> -->
     </main>
     <script src="main_2.0.js"></script>
 
